# niff-Stellar-shurance

./: .gitignore  PERFORMANCE.md
.kiro/specs/deployment-registry/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  README.md  TODO-claims.md  docker-compose.yml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin.module.ts
backend/src/auth/: auth.module.ts
backend/src/auth/decorators/: wallet-address.decorator.ts
backend/src/auth/guards/: jwt-auth.guard.ts
backend/src/auth/strategies/: jwt.strategy.ts
backend/src/cache/: redis.service.ts
backend/src/claims/: claims.controller.ts  claims.module.ts  claims.service.ts  sanitization.service.ts
backend/src/claims/dto/: claim.dto.ts
backend/src/common/filters/: http-exception.filter.ts
backend/src/common/middleware/: logger.middleware.ts
backend/src/config/: env.validation.ts
backend/src/health/: health.controller.ts  health.module.ts  prisma.health.ts
backend/src/indexer/: indexer.module.ts
backend/src/ipfs/: ipfs.module.ts
backend/src/rpc/: rpc.module.ts
contracts/niffyinsure/: Cargo.toml  DESIGN-ORACLE.md  SECURITY.md
contracts/niffyinsure/src/: admin.rs  claim.rs  lib.rs  oracle.rs  policy.rs  premium.rs  storage.rs  token.rs  types.rs  validate.rs
contracts/niffyinsure/tests/: admin.rs  oracle_stub.rs  security.rs  types_validate.rs  voting.rs
